--- a/Website-breakdown/index.html
+++ b/Website-breakdown/index.html
@@ -3,12 +3,19 @@
 <head>
 	<title>Website Breakdown</title>
 	<meta charset="utf-8"
-	<link rel="stylesheet" type="text/css" href="style.css">>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<div id="container">
-		<h1>Website Breakdown: RockStar </h1>
-		<img src="website-image.png">
+		<h1>Website Breakdown: RockStar Games </h1>
+		<p>This is the Rockstar Games Hompage</p>
+		<img src="rockstarimg.png">
+		<p>This is the Rockstar Games Signin Page</p>
+		<img src="signinpage.png">
+		<p>This is were you create a user profile</p>
+		<img src="userprofile.png">
+		<p>I am signed in</p>
+		<img src="loggedin.png">
 	</div>
 </body>
 </html>
