--- a/Website-breakdown/index.html
+++ b/Website-breakdown/index.html
@@ -10,12 +10,20 @@
 		<h1>Website Breakdown: RockStar Games </h1>
 		<p>This is the Rockstar Games Hompage</p>
 		<img src="rockstarimg.png">
+		<hr>
 		<p>This is the Rockstar Games Signin Page</p>
 		<img src="signinpage.png">
 		<p>This is were you create a user profile</p>
 		<img src="userprofile.png">
 		<p>I am signed in</p>
 		<img src="loggedin.png">
+		<p>This where any information can be posted</p>
+		<img src="informationandpost.png">
+		<p>This is social interaction</p>
+		<img src="socialinteraction.png">
+
+
+		<hr>
 	</div>
 </body>
 </html>
