--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<h1>MMP 350</h1>
 	<ul>
-		<li><a href="website-breackdown">Website breakdown</a></li>
+		<li><a href="website-breakdown">Website breakdown</a></li>
 	</ul>
 </body>
 </html>
