--- a/Website-breakdown/index.html
+++ b/Website-breakdown/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Website Breakdown</title>
+	<title>Website-breakdown</title>
 	<meta charset="utf-8"
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<div id="container">
-		<h1>Website Breakdown: RockStar Games </h1>
+		<h1>Website-breakdown: RockStar Games </h1>
 		<p>This is the Rockstar Games Hompage</p>
 		<img src="rockstarimg.png">
 		<hr>
