--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<h1>MMP 350</h1>
 	<ul>
 		<li><a href="Website-breakdown">Website-breakdown</a></li>
+		<li><a href="Authentication">Authentication</a></li>
 	</ul>
 </body>
 </html>
