--- a/auth/index.html
+++ b/auth/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
   <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-auth.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
@@ -41,6 +42,7 @@
 			<p id="login-message"></p>
       </div>
      </div>
+     <script type="js/helpers.js"></script>
      <script type="auth.js"></script>
 </body>
 </html>
