--- a/auth/index.html
+++ b/auth/index.html
@@ -7,6 +7,8 @@
   <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-database.js"></script>
+
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
@@ -42,7 +44,8 @@
 			<p id="login-message"></p>
       </div>
      </div>
-     <script type="js/helpers.js"></script>
-     <script type="auth.js"></script>
+     
+     <script src="js/helpers.js"></script>
+     <script src="js/auth.js"></script>
 </body>
 </html>
