--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<ul>
 		<li><a href="Website-breakdown">Website-breakdown</a></li>
 		<li><a href="auth">auth</a></li>
+		<li><a href="typography">
 	</ul>
 </body>
 </html>
