--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<li><a href="Website-breakdown">Website-breakdown</a></li>
 		<li><a href="auth">auth</a></li>
 		<li><a href="typography">typography</a></li>
+		<li><a href="publish">Publish</a>/li>
 	</ul>
 </body>
 </html>
