--- a/publish/index.html
+++ b/publish/index.html
@@ -72,9 +72,18 @@
       </div>
     </div>
     
+     <div id= "posts"></div>
+
   </div>
 
   <script src="js/helpers.js"></script>
   <script src="js/auth.js"></script>
+  <script src="js/publish.js"></script>
+  <script src="js/displayPosts.js"></script>
+  <script>
+    fb.loadPosts();
+  </script>
+
+
 </body>
 </html>
