--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<li><a href="auth">auth</a></li>
 		<li><a href="typography">typography</a></li>
 		<li><a href="publish">Publish</a></li>
+		<li><a href="color">Color</a>
 	</ul>
 </body>
 </html>
