--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<h1>MMP 350</h1>
 	<ul>
 		<li><a href="Website-breakdown">Website-breakdown</a></li>
-		<li><a href="auth">auth</a></li>
-		<li><a href="typography">typography</a></li>
+		<li><a href="auth">Auth</a></li>
+		<li><a href="typography">Typography</a></li>
 		<li><a href="publish">Publish</a></li>
 		<li><a href="color">Color</a>
 	</ul>
