--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
 	<h1>MMP 350</h1>
 	<ul>
-		<li><a href="Website-breakdown">Website-breakdown</a></li>
+		<li><a href="Website-breakdown">Website-Breakdown</a></li>
 		<li><a href="auth">Auth</a></li>
 		<li><a href="typography">Typography</a></li>
 		<li><a href="publish">Publish</a></li>
 		<li><a href="color">Color</a>
+		<li><a href="profile">Profile</a>	
 	</ul>
 </body>
 </html>
