--- a/profile/index.html
+++ b/profile/index.html
@@ -34,9 +34,9 @@
     </div>
 
     <div id="user-info">
-      <p id="login-username"></p>
+      <p id="user-name"></p>
+      <a id="edit-profile-link">Edit Profile</a>
       <button id="logout-button">Logout</button>
-      <a href="profile.html" id="profile-link">Edit Profile</a>
     </div>
 
     <div id="login">
