--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 		<li><a href="auth">Auth</a></li>
 		<li><a href="typography">Typography</a></li>
 		<li><a href="publish">Publish</a></li>
-		<li><a href="color">Color</a>
-		<li><a href="profile">Profile</a>	
+		<li><a href="color">Color</a></li>
+		<li><a href="profile">Profile</a></li>
+		<li><a href="layout">Layout</a></li>
 	</ul>
 </body>
 </html>
