--- a/profile/profile.html
+++ b/profile/profile.html
@@ -50,7 +50,8 @@
     
     <div id="profile">
       <input id="profile-display-name" placeholder="User name">
-      <textarea id="profile-bio" pl<!doctype html>
+      <textarea id="profile-bio" placeholder="Add your bio"></textarea>
+      <button id="update-profile">Update Profile</button>
 <html>
 <head>
   <title>MMP 350</title>
