--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<li><a href="layout">Layout</a></li>
 		<li><a href="storage">Storage</a></li>
 		<li><a href="responsive">Responsive</a></li>
+		<li><a href="final">Final</a></li>
 	</ul>
 </body>
 </html>
