--- a/final/index.html
+++ b/final/index.html
@@ -3,13 +3,13 @@
 <head>
   <title>MMP 350</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="style.css" rel="stylesheet" type="text/css">
 
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-database.js"></script>
-   <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-storage.js"></script>
 
   <script>
     // Your web app's Firebase configuration
@@ -31,7 +31,8 @@
 <body>
   <div id="container">
     <div id="title">
-      <h1>MMP 350 Site</h1>
+      <h1><a href="index.html">MMP 350 Site</a></h1>
+      <a href="users.html">View Site Users</a>
     </div>
 
     <div id="user-info">
@@ -41,11 +42,11 @@
     </div>
 
     <div id="login">
+      <p id="create-link"><a href="create.html">Create a new account</a></p>
       <input id="login-email" type="text" placeholder="Email">
       <input id="login-password" type="password" placeholder="Password">
       <button id="login-button">Login</button>
       <p id="login-message"></p>
-      <p><a href="create.html">Create a new account</a></p>
     </div>
 
     <div id="publish-post">
