--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Star Wars Battlefront 2 Blog</title>
+	<title>MMP 350</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1> Star Wars BattleFront 2 Blog</h1>
+	<h1>MMP 350</h1>
 	<ul>
 		<li><a href="Website-breakdown">Website-Breakdown</a></li>
 		<li><a href="auth">Auth</a></li>
